feat: Integrate Supabase for data persistence
Introduces Supabase as the primary data source for user transactions, replacing local storage. This change includes:

- Adding `@supabase/supabase-js` dependency.
- Implementing `services/supabase.ts` for database interactions (fetching and saving transactions).
- Updating `App.tsx` to load and manage transactions from Supabase.
- Modifying `components/Portfolio.tsx` and `components/Transactions.tsx` to adapt to the new data flow and support adding new assets.
- Includes a fallback to local storage if Supabase is not configured, with a warning.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.39.7"
   }
 }
 </script>
