feat: Add support for Excel and PDF imports
Integrates xlsx and pdfjs-dist libraries to enable parsing of Excel (.xlsx, .xls) and PDF files, expanding the importer's file type compatibility.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
     "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.10.38",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
   }
